Добавлены кнопки Очистки и Выхода. Добавлено сообщение о переполнении.

--- a/MemoryScope.csproj
+++ b/MemoryScope.csproj
@@ -94,5 +94,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="images\exit2.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
